<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorWeekUnselect" >
        <Button
            android:id="@+id/overlay_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_sub_sel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/frames"
            android:textSize="20sp"
            android:textColor="@color/colorGray"
            android:textAllCaps="false"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/overlay_doodle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@drawable/overlay_sub_sel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/doodles"
            android:textSize="20sp"
            android:textColor="@color/colorGray"
            android:textAllCaps="false"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/overlay_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_sub_sel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/effects"
            android:textSize="20sp"
            android:textColor="@color/colorGray"
            android:textAllCaps="false"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/subeffectselector"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorEmpty"
        android:orientation="horizontal" />
</LinearLayout>